finish IlihubRepoCreator-Task